[package]
name = "dotconvo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1.10",features = ["serde"]}
dotenv = "0.15"
tokio = { version = "1", features = ["full"]}
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
actix-web-httpauth = "0.8.2"
actix-multipart = "0.7.2"
chrono = {version = "0.4", features = ["serde"]}